# fastapi-template

./: README.md  example.env  fastapi-jinja.code-workspace  main.py  pyproject.toml
backend/: __main__.py
backend/app/: build.py  depends.py
backend/app/api/: router.py
backend/common/: db_service.py  model_repository.py  models.py  types.py
backend/common/interfaces/: __init__.py  db_repository.py  db_service.py
backend/common/schemas/: __init__.py  errors.py  http.py  http_schemas.py  interface.py  query_params.py
backend/core/: schema.py
backend/core/config/: __init__.py  app.py  base.py  pyproject_info.py
backend/core/log/: options.py
backend/core/security/: __init__.py  cryptography.py  fingerprint.py  oauth_bearer.py  rbac.py
backend/db/: __init__.py  base.py  config.py  const.py  core.py  models.py
backend/middleware/: __init__.py  core.py  exception_handling.py  request_logging.py
backend/redis/: config.py  depends.py
backend/utils/: openapi_extra.py  orm_utils.py  pagination_utils.py
project/app/: build.py
project/app/api/: router.py
project/app/common/: models.py  types.py
project/app/db/: config.py  core.py  depends.py  models.py
project/app/log/: __init__.py  core.py  options.py
project/app/middleware/: core.py  exception_handling.py  request_logging.py
project/app/redis/: __init__.py  (+2 more)
project/core/: database_service.py  db_models.py  http_exceptions.py  model_repository.py  settings.py
project/lib/: schemas.py  settings.py
scripts/: create_env.py  export_openapi.py
src/: config.toml
src/app/: main.py
src/scripts/: create_env.py  generate_keys.sh
(+138 files in other folders)
