[project]
name = "fastapi-jinja"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.21.0",
    "bcrypt==4.0.1",
    "cryptography>=45.0.5",
    "fastapi[all]>=0.116.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.10.1",
    "redis[hiredis]>=6.2.0",
    "sqlalchemy>=2.0.41",
]
