[project]
name = "fastapi-jinja"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "bcrypt==4.0.1",
    "cryptography>=45.0.5",
    "fastapi[all]>=0.116.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.10.1",
    "pyyaml>=6.0.2",
    "redis[hiredis]>=6.2.0",
    "sqlalchemy[asyncio]>=2.0.41",
]
